# convex-mobile

./: .gitmodules  LICENSE  README.md
android/: README.md  build.gradle  settings.gradle
android/convexmobile/: build.gradle
android/convexmobile/src/androidTest/: AndroidManifest.xml
android/convexmobile/src/androidTest/java/dev/convex/android/: ConvexClientInstrumentationTest.kt  ConvexClientWithAuthTest.kt
android/convexmobile/src/main/java/dev/convex/android/: Auth0Provider.kt  ConvexClient.kt  ConvexData.kt  ConvexException.kt  errors.kt  jsonhelpers.kt
android/convexmobile/src/main/java/dev/convex/android/testing/: FakeFfiClient.kt
android/convexmobile/src/test/java/dev/convex/android/: ConvexClientTest.kt
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
android/lib/: build.gradle
android/lib/src/androidTest/java/dev/convex/android/: ExampleInstrumentedTest.kt
android/lib/src/main/res/values/: strings.xml  themes.xml
android/lib/src/main/res/values-night/: themes.xml
android/lib/src/test/java/dev/convex/android/: ExampleUnitTest.kt
app_for_test/: .gitignore  package-lock.json  package.json
app_for_test/convex/: messages.ts  schema.ts
demos/android-quickstart/: .gitignore  README.md  package-lock.json  package.json  settings.gradle.kts
demos/android-quickstart/app/: build.gradle.kts
demos/android-quickstart/app/src/androidTest/java/dev/convex/officialquickstart/: ExampleInstrumentedTest.kt
demos/android-quickstart/app/src/main/: AndroidManifest.xml
demos/android-quickstart/app/src/main/java/dev/convex/officialquickstart/: MainActivity.kt
demos/android-quickstart/app/src/main/java/dev/convex/officialquickstart/ui/theme/: Color.kt  Theme.kt  Type.kt
demos/android-quickstart/app/src/main/res/values/: strings.xml  themes.xml
demos/android-quickstart/app/src/test/java/dev/convex/officialquickstart/: ExampleUnitTest.kt
demos/android-quickstart/gradle/wrapper/: gradle-wrapper.properties
rust/: Cargo.toml  build-ios.sh  build.rs  uniffi.toml
rust/src/: convex-mobile.udl  lib.rs  logging.rs
