[package]
name = "convex-mobile"
version = "0.1.0"
edition = "2021"

[dependencies]
uniffi = { version = "0.28", features = ["cli"] }
tokio = { version = "1", features = ["full"] }
android_logger = { version = "0.14.1" }
log = { version = "0.4.21" }
convex = { version = "=0.6.0", default-features = false, features = ["rustls-tls-webpki-roots"] }
anyhow = { version = "1.0.86" }
thiserror = { version = "1.0.61" }
tokio-stream = { features = [ "io-util", "sync" ], version = "0.1" }
once_cell = { version = "1.19.0" }
futures = { version = "0.3" }
parking_lot = { version = "0.12.3" }
async-once-cell = { version = "0.5.3" }
serde_json = { version = "1.0.120" }


[build-dependencies]
uniffi = { version = "0.28", features = [ "build" ]}

[lib]
crate-type = ["cdylib", "lib"]
name = "convexmobile"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"