[package]
name = "convex-mobile"
version = "0.2.1"
edition = "2021"

[dependencies]
uniffi = { version = "0.28", features = ["cli"] }
tokio = { version = "1", features = ["full"] }
android_logger = { version = "0.14.1" }
log = { version = "0.4.21" }
convex = { version = "0.10.1", default-features = false, features = ["rustls-tls-webpki-roots"] }
anyhow = { version = "1.0.86" }
thiserror = { version = "1.0.61" }
tokio-stream = { features = [ "io-util", "sync" ], version = "0.1" }
once_cell = { version = "1.19.0" }
futures = { version = "0.3" }
parking_lot = { version = "0.12.3" }
async-once-cell = { version = "0.5.3" }
serde_json = { version = "1.0.120" }
rustls = { version = "0.23", features = ["aws-lc-rs"] }
aws-lc-rs = { version = "1.14", features = ["bindgen"], optional = true }

[features]
default = ["aws-lc-rs"]

[dev-dependencies]
maplit = { version = "1" }

[build-dependencies]
uniffi = { version = "0.28", features = [ "build" ]}

[lib]
crate-type = ["cdylib", "lib", "staticlib"]
name = "convexmobile"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
