[package]
name = "convex-mobile"
version = "0.3.0"
edition = "2021"

[dependencies]
uniffi = { version = "0.28", features = ["cli"] }
tokio = { version = "1", features = ["full"] }
android_logger = { version = "0.14.1" }
log = { version = "0.4.21" }
convex = { version = "0.10.3", default-features = false, features = ["rustls-tls-webpki-roots"] }
async-trait = "0.1"
anyhow = { version = "1.0.86" }
thiserror = { version = "1.0.61" }
tokio-stream = { features = [ "io-util", "sync" ], version = "0.1" }
once_cell = { version = "1.19.0" }
futures = { version = "0.3" }
parking_lot = { version = "0.12.3" }
async-once-cell = { version = "0.5.3" }
serde_json = { version = "1.0.120" }
rustls = { version = "0.23", features = ["aws-lc-rs"] }
aws-lc-rs = { version = "1.14", features = ["bindgen"], optional = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = ["aws-lc-rs"]
max_level_off = ["tracing/max_level_off"]
max_level_error = ["tracing/max_level_error"]
max_level_warn = ["tracing/max_level_warn"]

[dev-dependencies]
maplit = { version = "1" }

[build-dependencies]
uniffi = { version = "0.28", features = [ "build" ]}

[target.'cfg(target_os = "android")'.dependencies]
tracing-android = "0.2"
android_logger = "0.14"

[target.'cfg(target_os = "ios")'.dependencies]
tracing-oslog = "0.3"
oslog = "0.2"

[profile.release]
features = ["max_level_warn"] 

[lib]
crate-type = ["cdylib", "lib", "staticlib"]
name = "convexmobile"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
